aligning log and email messages, using same approach for send error handling